[package]
name = "human-in-the-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.40", features = ["derive", "env"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "io-std"] }
serenity = { version = "0.12.4", features = ["collector"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
schemars = "0.8"
async-trait = "0.1.88"
